Projeto Mercado em Ruby

--- a/app/views/fornecedors/show.html.erb
+++ b/app/views/fornecedors/show.html.erb
@@ -62,6 +62,6 @@
  <div class="row">
                 <div class="col-lg-7 form-group">  
                   <%= link_to 'Alterar Fornecedor', edit_fornecedor_path(@fornecedor), :class => "btn btn-primary colorprimarybtn" %>
-                  <%= link_to 'Voltar',  fornecedor_path, :class => "btn btn-primary colorprimarybtn"%>
+                  <%= link_to 'Voltar',  fornecedors_path, :class => "btn btn-primary colorprimarybtn"%>
                 </div>
     </div>
