--- a/app/views/fornecedors/_form.html.erb
+++ b/app/views/fornecedors/_form.html.erb
@@ -28,13 +28,13 @@
 <div class="row">
        <div class="col-lg-4 form-group">   
            <%= form.label :cnpj_cpf, :class => 'control-label required' %>
-           <%= form.text_field :nome,  :class => 'form-control' %>
+           <%= form.text_field :cnpj_cpf,  :class => 'form-control' %>
        </div>
         <div class="col-lg-5 form-group">   
            <%= form.label :email, :class => 'control-label' %>
            <%= form.text_field :email, :class => 'form-control' %>
        </div>
-       <div class="col-lg-3 form-group">   
+       <div class="col-lg-3 form-group">   nome
            <%= form.label :cep, :class => 'control-label' %>
            <%= form.text_field :cep, :class => 'form-control' %>
        </div>
