Criacao dos Usuarios

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,6 +86,11 @@
                   <a href="<%= fornecedors_path%>" class="menulink"><i class="fa fa-cart-plus fa-fw"></i> fornecedores</a>
                 </li>
                 <li>
+
+                <li>
+                <a href="<%= users_path%>" class="menulink"><i class="fa fa-cart-plus fa-fw"></i> usuarios</a>
+              </li>
+              <li>
                     <a href="#configuracaosubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle menulink">
                     <i class="fas fa-cog"></i> Configurações</a>
                     <ul class="collapse list-unstyled" id="configuracaosubmenu">
