--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,7 +113,11 @@
          
            <ul class="list-unstyled CTAs">
                 <li>
-                   
+                <ul class="list-unstyled CTAs">
+                <li>
+                    <%= link_to('SAIR', destroy_user_session_path, method: :delete, class: 'download') %>
+                </li>
+            </ul>
                 </li>
             </ul>
         </nav>
