--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -2,6 +2,8 @@
 
 <h1>Produtos</h1>
 
+<%= link_to "Relatório ", relatorio_produtos_path(format: 'pdf'), :target => "_blank", :class => "btn btn-primary colorprimarybtn" %>
+
 <table>
   <thead>
     <tr>
