--- a/app/views/produtos/show.html.erb
+++ b/app/views/produtos/show.html.erb
@@ -16,7 +16,7 @@
   
       <div class="col-lg-4 form-group"> 
           <label class = 'control-label'>Validade</label>
-          <input readonly="true" class = 'form-control' value="<%= @produto.validade %>" />  
+          <input readonly="true" class = 'form-control' value="<%= @produto.data_validade %>" />  
       </div>
     
 
@@ -24,23 +24,23 @@
           <label class = 'control-label'>Marca</label>
           <input readonly="true" class = 'form-control' value="<%= @produto.marca %>" />  
       </div>
-      </div>
 
-      <div class="col-lg-7 form-group"> 
+
+      <div class="col-lg-3 form-group"> 
           <label class = 'control-label'>Preco</label>
           <input readonly="true" class = 'form-control' value="<%= @produto.preco %>" />  
       </div>
-  </div>
+
 
       <div class="col-lg-2 form-group"> 
           <label class = 'control-label'>Quantidade</label>
-          <input readonly="true" class = 'form-control' value="<%= @produto.quantidade %>" />  
+          <input readonly="true" class = 'form-control' value="<%= @produto.qtd %>" />  
       </div>
       
  
       <div class="col-lg-5 form-group"> 
           <label class = 'control-label'>Fornecedor</label>
-          <input readonly="true" class = 'form-control' value="<%= @produto.fornecedor %>" />  
+          <input readonly="true" class = 'form-control' value="<%= @produto.fornecedor.nome %>" />  
       </div>
       </div>
 <div class="row">
